--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ subjects:
 - !lcsh 'Jungles -- Juvenile fiction'
 - !lcc 'PZ'
 - !lcsh 'Tamaulipas (Mexico : State) -- Juvenile fiction'
+- GITenberg
 title: Ken Ward in the Jungle
 url: http://www.gutenberg.org/ebooks/45974
